--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/less"></script>
 
 
-    <title>Контрольное_задание_10</title>
+    <title>Macaroons</title>
 </head>
 <body>
 
